plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.gaudiy'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2023.0.1")
}

dependencies {

    //Web Socket configurations
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.java-websocket:Java-WebSocket:1.5.6'

    //Rest configurations
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //Json parsing configurations
    implementation 'com.google.code.gson:gson:2.10.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
